--- a/src/AspNetCoreWebApp/AspNetCoreWebApp/Pages/Index.cshtml
+++ b/src/AspNetCoreWebApp/AspNetCoreWebApp/Pages/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+	<h1 class="display-4">Welcome</h1>
+	<p>Hello, world! The time on the server is @DateTime.Now</p>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
